# cppMarathon

./: README.md  lab2.cpp  lab2.h
core_3/: CMakeLists.txt
core_3/include/: Service_handle.h  device_handle.h  devices.h  encashment.h  logic.h  promo.h  screen.h  step.h  stepper.hpp  test.h
core_3/src/: Service_handle.cpp  device_handle.cpp  devices.cpp  encashment.cpp  logic.cpp  main.cpp  promo.cpp  screen.cpp  step.cpp  stepper.cpp  test.cpp
untitled2/: CMakeLists.txt
untitled2/include/: stepper.hpp
untitled2/src/: main.cpp  stepper.cpp
